--- a/src/manifest.json
+++ b/src/manifest.json
@@ -4,7 +4,7 @@
   "description": "Google chrome extension example with angular material",
   "version": "1.0",
   "browser_action": {
-    "default_icon": "favicon.ico",
+    "default_icon": "./assets/images/company-logo-icon.png",
     "default_popup": "index.html"
   },
   "permissions": [],
